<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52"
        tools:layout_editor_absoluteX="1dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/calculations_number_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_calculations_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/calculations_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_calculations"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/winrate_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/winrate_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/winrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/winrate"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/last_calculation_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_calculation_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/last_calculation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_calculation"
                android:textSize="20sp" />
        </TableRow>


    </TableLayout>

    <TextView
        android:id="@+id/app_title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23000002" />

    <ImageButton
        android:id="@+id/return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/returnbutton"
        android:contentDescription="@string/return_button" />
</androidx.constraintlayout.widget.ConstraintLayout>